Fix mobile Destination IP column alignment and release v0.1.18.
Unify th/td padding and box-sizing, align sticky header offset, and left-align the Destination IP header to match data cells.

--- a/src/containers/Connections/style.scss
+++ b/src/containers/Connections/style.scss
@@ -14,6 +14,8 @@
         $height: 30px;
 
         position: relative;
+        box-sizing: border-box;
+        padding: 0 10px;
         text-align: center;
         color: $color-gray-darken;
         background: $color-gray-light;
@@ -32,7 +34,7 @@
 
         &.fixed {
             position: sticky !important;
-            left: -0.1px;
+            left: 0;
             z-index: 99;
             &.shadow {
                 box-shadow: inset -9px 0 8px -14px $color-black;
@@ -81,6 +83,7 @@
     }
 
     .connections-block {
+        box-sizing: border-box;
         font-size: 14px;
         line-height: 36px;
         padding: 0 10px;
@@ -103,6 +106,10 @@
             background-color: darken($color-gray-light, 3%);
             color: rgba($color-primary-darken, 50%);
         }
+    }
+
+    .connections-th.col-destinationIP {
+        text-align: left;
     }
 }
 
